# tokensniffer-cli

./: .pylintrc  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
tests/: test_api.py  test_cli.sh
tokensniffer/: api.py  cli.py
