[metadata]
name = tokensniffer-cli
version = 0.1
description = A CLI for TokenSniffer API
author = Solidus Labs
url = https://github.com/SolidusLabsExternal/tokensniffer-cli

[options]
packages = find:
install_requires =
    click
    requests

[options.entry_points]
console_scripts =
    tokensniffer = tokensniffer.cli:cli

[options.extras_require]
dev =
    pytest
    black
    isort
    pylint
